# AnyPID

./: .gitignore  README.md  pyproject.toml
anypid/: poc_server.py  wip_server.py
anypid/lib/: error.py
anypid/provider/: chinese_doi.py
anypid/res/: default_chinese_doi_template.xml
tests/: test_chinese_doi.py
